package A08_ARA0075_PPS_NA.aula05.padrao_builder;

// Builder concreto para formato XLS
public class XlsNotaNegociacaoBuilder implements NotaNegociacaoBuilder {
    private NotaNegociacao nota;

    public XlsNotaNegociacaoBuilder() {
        this.nota = new NotaNegociacao();
    }

    @Override
    public void buildCabecalho() {
        nota.adicionarConteudo("XLS: Cabeçalho da Nota");
    }

    @Override
    public void buildOperacoes() {
        nota.adicionarConteudo("XLS: Lista de operações");
    }

    @Override
    public void buildSumario() {
        nota.adicionarConteudo("XLS: Sumário com totais e taxas");
    }

    @Override
    public NotaNegociacao getNota() {
        return nota;
    }
}